add id to main container

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     </span>
   </nav>
   <!-- Main Content -->
-  <main>
+  <main id="main-content">
     <!-- Menu Item Card -->
     <section id="orders" class="container container--orders">
       <h1>Order Summary</h1>
