--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,14 @@
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/card.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/profile.css" type="text/css" />
 
   <!-- App JS -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-  <script type="text/javascript" src="/scripts/menuItemsList.js"></script>
+  <script type="text/javascript" src="/scripts/views_manager.js"></script>
+  <script type="text/javascript" src="/scripts/components/menu_list.js"></script>
+  <script type="text/javascript" src="/scripts/components/order_summary.js"></script>
+  <script type="text/javascript" src="/scripts/components/profile.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
@@ -25,7 +29,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar--dark navbar--fixed">
     <img class="navbar__logo" src="./images/gitit-logo.png" alt="logo">
-    <span class="navbar__item">History</span>
+    <span class="navbar__item">Profile</span>
     <span class="navbar__item">Home</span>
     <span class="navbar__item">
       <i class="fas fa-cart-arrow-down"></i>
@@ -35,72 +39,11 @@
   </nav>
   <!-- Main Content -->
   <main id="main-content">
-    <!-- Menu Item Card -->
-    <section id="orders" class="container container--orders">
-      <h1>Order Summary</h1>
-      <div>
-        <table class="table--items">
-          <tr>
-            <td>
-              <p>Item</p>
-            </td>
-            <td>
-              <p>Quantity</p>
-            </td>
-            <td>
-              <p>Price</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <p>Alaska Roll</p>
-            </td>
-            <td>
-              <select>
-                <option value="">0</option>
-                <option value="">1</option>
-                <option value="">2</option>
-                <option selected="selected" value="">3</option>
-                <option value="">4</option>
-                <option value="">5</option>
-              </select>
-            </td>
-            <td>
-              <p>$22.00</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <p>Alaska Roll</p>
-            </td>
-            <td>
-              <select>
-                <option value="">0</option>
-                <option value="">1</option>
-                <option value="">2</option>
-                <option value="">3</option>
-                <option value="">4</option>
-                <option selected="selected" value="">5</option>
-              </select>
-            </td>
-            <td>
-              <p>$22.00</p>
-            </td>
-          </tr>
-        </table>
-        <table class="table--total">
-          <tr>
-            <td>
-              <p>Total</p>
-            </td>
-            <td>
-              <p>$66.00</p>
-            </td>
-          </tr>
-        </table>
-        <button>
-          Place Order
-        </button>
+    <section id="order-redirect">
+      <div class="redirect">
+        <p>Your order has been placed.</p>
+        <p>You will be redirected to your Orders page</p>
+        <p>You will also receive a text message with your order details</p>
       </div>
     </section>
   </main>
