--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,15 @@
 
   <!-- App JS -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+  <script type="text/javascript" src="/scripts/network.js"></script>
   <script type="text/javascript" src="/scripts/views_manager.js"></script>
   <script type="text/javascript" src="/scripts/components/menu_list.js"></script>
   <script type="text/javascript" src="/scripts/components/order_summary.js"></script>
   <script type="text/javascript" src="/scripts/components/profile.js"></script>
-  <script type="text/javascript" src="/scripts/app.js"></script>
+  <script type="text/javascript" src="/scripts/components/order_redirect.js"></script>
+  <script type="text/javascript" src="/scripts/components/order_receipt.js"></script>
+  <script type="text/javascript" src="/scripts/index.js"></script>
+  <script type="text/javascript" src="/scripts/helpers/loadListeners.js"></script>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 
@@ -39,13 +43,6 @@
   </nav>
   <!-- Main Content -->
   <main id="main-content">
-    <section id="order-redirect">
-      <div class="redirect">
-        <p>Your order has been placed.</p>
-        <p>You will be redirected to your Orders page</p>
-        <p>You will also receive a text message with your order details</p>
-      </div>
-    </section>
   </main>
   <!-- Footer -->
   <footer id="footer">
