Starter code for dropdown auth buttons

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,14 @@
       Order
       <p></p>
     </span>
+    <div class="dropdown">
+      <button class="dropbtn">User Name
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="#">Log Out</a>
+      </div>
+    </div>
   </nav>
   <!-- Main Content -->
   <main id="main-content">
