Add drop down menu in navbar for quick log in and log out for demo

--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,14 @@
       <p></p>
     </span>
     <div class="dropdown">
-      <button class="dropbtn">User Name
+      <button class="dropbtn">Log In
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a href="#">Log Out</a>
+        <button id="luis">Log in As Luis</button>
+        <button id="alireza">Log in As Alireza</button>
+        <button id="ivan">Log in As Ivan</button>
+        <button id="logout">Log Out</button>
       </div>
     </div>
   </nav>
