--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/card.css" type="text/css" />
   <link rel="stylesheet" href="/styles/profile.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/rejected-message-input.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/rejected-popup.css" type="text/css" />
 
   <!-- App JS -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
@@ -40,6 +42,10 @@
   </nav>
   <!-- Main Content -->
   <main id="main-content">
+   <div class="message-container">
+     <span id="message"><P>THE ORDER WAS REJECTED YOU WILL BE REDIRECTED TO ORDERS PAGE IN .... <br>3 seconds</P></span>
+
+   </div>
   </main>
   <!-- Footer -->
   <footer id="footer">
