Add new styles for the views

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/card.css" type="text/css" />
   <link rel="stylesheet" href="/styles/profile.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/admin-history.css" type="text/css" />
 
   <!-- App JS -->
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
@@ -24,7 +25,11 @@
   <script type="text/javascript" src="/scripts/views/navbar_admin.js"></script>
   <script type="text/javascript" src="/scripts/models/navbar_admin.js"></script>
   <script type="text/javascript" src="/scripts/views/menu_list.js"></script>
+  <script type="text/javascript" src="/scripts/views/admin_menu_list.js"></script>
+  <script type="text/javascript" src="/scripts/views/admin_history.js"></script>
+  <script type="text/javascript" src="/scripts/views/create_item_form.js"></script>
   <script type="text/javascript" src="/scripts/models/menu_list.js"></script>
+  <script type="text/javascript" src="/scripts/models/admin_menu_list.js"></script>
   <script type="text/javascript" src="/scripts/models/order_summary.js"></script>
   <script type="text/javascript" src="/scripts/models/profile.js"></script>
   <script type="text/javascript" src="/scripts/models/order_redirect.js"></script>
