Implement reject, fulfill, accept functionalities

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
   <script type="text/javascript" src="/scripts/views/item_delete_popup.js"></script>
   <script type="text/javascript" src="/scripts/views/item_edit_popup.js"></script>
   <script type="text/javascript" src="/scripts/views/create_item_form.js"></script>
+  <script type="text/javascript" src="/scripts/views/order_ready_popup.js"></script>
   <script type="text/javascript" src="/scripts/views/pending_orders_card.js"></script>
   <script type="text/javascript" src="/scripts/views/rejected_popup.js"></script>
   <script type="text/javascript" src="/scripts/views/order_accepted_popup.js"></script>
